--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="RepsApp">
   <head>
     <meta charset="utf-8">
     <title>Find your representative</title>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <!-- TODO You need to put your style imports here -->
   </head>
   <body>
-
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-header">
+        <a href="/" class="navbar-brand">Search your Reps</a>
+      </div>
+    </nav>
+    <div class="container-fluid" ng-controller="MainCtrl as main">
+      <div class="row">
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+          <div class="text-center">
+            <input type="radio" ng-model="main.radio.allRepSen" name="all-rep-sen" value="allTrue"> All &nbsp;&nbsp;&nbsp;<!--
+            --><input type="radio" ng-model="main.radio.allRepSen" name="all-rep-sen" value="repsTrue"> Reps &nbsp;&nbsp;&nbsp;<!--
+            --><input type="radio" ng-model="main.radio.allRepSen" name="all-rep-sen" value="sensTrue"> Sens
+            <br><br>
+            <span ng-if="main.radio.allRepSen == 'repsTrue'">
+              <input type="radio" ng-model="main.radio.reps" name="reps-search" value="repsLastTrue"> by Last Name &nbsp;&nbsp;&nbsp;<!--
+              --><input type="radio" ng-model="main.radio.reps" name="reps-search" value="repsStateTrue"> by State
+            </span>
+            <span ng-if="main.radio.allRepSen == 'sensTrue'">
+              <input type="radio" ng-model="main.radio.sens" name="sens-search" value="sensLastTrue"> by Last Name &nbsp;&nbsp;&nbsp;<!--
+              --><input type="radio" ng-model="main.radio.sens" name="sens-search" value="sensStateTrue"> by State
+            </span>
+          </div>
+          <br>
+          <form class="form-inline text-center" ng-submit="main.searchByZip(main.inputs.zip)" ng-if="main.radio.allRepSen == 'allTrue'">
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <span class="input-group-addon" id="basic-addon1">Zip</span>
+                <input type="text" class="form-control" ng-model="main.inputs.zip">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-default btn-info btn-lg">Submit</button>
+          </form>
+          <form class="form-inline text-center" ng-submit="main.searchByLast(main.inputs.last)" ng-if="main.radio.allRepSen == 'repsTrue' && main.radio.reps == 'repsLastTrue' || main.radio.allRepSen == 'sensTrue' && main.radio.sens == 'sensLastTrue'">
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <span class="input-group-addon" id="basic-addon1">Last</span>
+                <input type="text" class="form-control" ng-model="main.inputs.last">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-default btn-info btn-lg">Submit</button>
+          </form>
+          <form class="form-inline text-center" ng-submit="main.searchByState(main.inputs.state)" ng-if="main.radio.allRepSen == 'repsTrue' && main.radio.reps == 'repsStateTrue' || main.radio.allRepSen == 'sensTrue' && main.radio.sens == 'sensStateTrue'">
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <span class="input-group-addon" id="basic-addon1">State</span>
+                <input type="text" class="form-control" ng-model="main.inputs.state">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-default btn-info btn-lg">Submit</button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="reps-list col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+          <ul class="list-group">
+            <li class="list-group-item" ng-repeat="rep in main.reps">{{rep.state}} : {{rep.name}}</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <!-- TODO You need to put your script tags here -->
+    <script src="/bower_components/jquery/dist/jquery.min.js" ></script>
+    <script src="/bower_components/angular/angular.min.js" ></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
